# competences

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEBUGGING.md  DEPLOYMENT.md  cabal.project  deploy_frontend.sh  flake.nix  fourmolu.yaml  haskell_dev_env.el  start.sh  tailwind.config.js  test-container.sh
backend/: competences-backend.cabal  config.example.json  schema.sql
backend/app/: Main.hs
backend/lib/Competences/Backend/: Auth.hs  Config.hs  Database.hs  Envelope.hs  HTTP.hs  HashedFile.hs  State.hs  WebSocket.hs
backend/lib/Competences/Backend/API/: Auth.hs
backend/lib/Competences/Backend/Eff/: CompetenceGrid.hs  Db.hs
backend/test/: Main.hs
backend/test/Util/Eff/: TestDb.hs
common/: competences-common.cabal
common/lib/Competences/: Command.hs  Document.hs  Event.hs  Model.hs  Protocol.hs
common/lib/Competences/API/: Auth.hs  CourseList.hs
common/lib/Competences/Analysis/: Statistics.hs
common/lib/Competences/Command/: Assignments.hs  ChangeField.hs  Common.hs  CompetenceAssessments.hs  CompetenceGridGrades.hs  Competences.hs  Evidences.hs  Interpret.hs  Tasks.hs  Users.hs
common/lib/Competences/Common/: BinaryOrphans.hs  IxSet.hs
common/lib/Competences/Document/: ActivityType.hs  Assessment.hs  Assignment.hs  ChangableField.hs  Competence.hs  CompetenceGrid.hs  CompetenceGridGrade.hs  Evidence.hs  Grade.hs  Id.hs  Lock.hs  Order.hs  Resource.hs  Task.hs  Template.hs  User.hs  Verdict.hs
common/lib/Competences/Model/: Assessment.hs  ChangableField.hs  Competence.hs  CompetenceGrid.hs  Evidence.hs  Grid.hs  Id.hs  Resource.hs  User.hs
common/test/: Main.hs
csvconvert/: competences-csvconvert.cabal
csvconvert/app/: Main.hs
docs/: ARCHITECTURE.md  BASECOAT-REFERENCE.md  DATABASE.md  DEBUGGING.md  TASKS-DESIGN.md  TASKS-IMPLEMENTATION-PLAN.md  TESTING.md  example-nixos-config.nix  test-container.nix
frontend/: cabal.project  cabal.project.freeze  competences-frontend.cabal
frontend/app/: Main.hs
frontend/lib/: MyLib.hs
frontend/lib/Competences/Frontend/: Action.hs  App.hs  Common.hs  CompetenceEditor.hs  Document.hs  State.hs  SyncContext.hs  SyncDocument.hs  Translate.hs  UIState.hs  View.hs  WebSocket.hs
frontend/lib/Competences/Frontend/App/: Action.hs  ComponentRegistry.hs  RegisteredComponent.hs  RegisteredComponentRegistrations.hs  State.hs  Topics.hs
frontend/lib/Competences/Frontend/Common/: Button.hs  Effect.hs  Icon.hs  MisoExt.hs  Modal.hs  Random.hs  Reorder.hs  Style.hs  Translate.hs
frontend/lib/Competences/Frontend/Component/: Assignment.hs  AssignmentEditor.hs  AssignmentEvaluator.hs  AssignmentViewer.hs  CompetenceEditor.hs  CompetenceGrid.hs  CompetenceGridEditor.hs  CompetenceGridViewer.hs  CompetenceSelector.hs  ConnectionStatus.hs  DateSelector.hs  Editable.hs  Editor.hs  EnumSelector.hs  EvidenceCompetenceSelector.hs  EvidenceCreator.hs  EvidenceEditor.hs  EvidenceSelector.hs  ListSelector.hs  SelectorDetail.hs  SelfContainedTaskEditor.hs  Static.hs  StatisticsOverview.hs  StatisticsViewer.hs  TaskEditor.hs  TemplateEvaluator.hs  UserListEditor.hs  UserSelector.hs
frontend/lib/Competences/Frontend/Component/Assignment/: EditorDetail.hs  EvaluatorDetail.hs
frontend/lib/Competences/Frontend/Component/CompetenceGrid/: Assessment.hs  Editor.hs  Grading.hs  Types.hs  Viewer.hs
frontend/lib/Competences/Frontend/Component/Editor/: Editable.hs  EditorField.hs  FlowView.hs  FormView.hs  TableView.hs  Types.hs  View.hs
frontend/lib/Competences/Frontend/Component/EvidenceEditor/: BulkEvidenceEditor.hs
frontend/lib/Competences/Frontend/Component/Selector/: AssignmentSelector.hs  Common.hs  CompetenceGridSelector.hs  CompetenceLevelSelector.hs  DateSelector.hs  EnumSelector.hs  EvidenceSelector.hs  Example.hs  ListSelector.hs  MultiStageSelector.hs  MultiTaskSelector.hs  ObservationSelector.hs  SearchableListSelector.hs  SelfContainedTaskSelector.hs  TaskOrGroupSelector.hs  UserSelector.hs
frontend/lib/Competences/Frontend/Component/TaskEditor/: TaskDetailView.hs  TaskGroupDetailView.hs
frontend/lib/Competences/Frontend/Grid/: Action.hs  App.hs  State.hs  Topic.hs  View.hs
frontend/lib/Competences/Frontend/Grid/State/: Edit.hs
frontend/lib/Competences/Frontend/Grid/View/: Editable.hs  ViewCtx.hs
frontend/lib/Competences/Frontend/GridEditor/: .#App.hs  Action.hs  App.hs  State.hs  View.hs
frontend/lib/Competences/Frontend/GridEditor/State/: Edit.hs
frontend/lib/Competences/Frontend/GridEditor/View/: Editable.hs
frontend/lib/Competences/Frontend/Modal/: CompetenceEditor.hs
frontend/lib/Competences/Frontend/Page/: EditCompetenceGridPage.hs  EvidencesPage.hs  ManageUsersPage.hs  ViewCompetenceGridPage.hs
frontend/lib/Competences/Frontend/State/: Edit.hs
frontend/lib/Competences/Frontend/SyncContext/: ProjectedSubscription.hs  SyncDocument.hs  UIState.hs
frontend/lib/Competences/Frontend/View/: Badge.hs  Button.hs  Card.hs  Colors.hs  Combobox.hs  Component.hs  DesignTokens.hs  Form.hs  GradeBadge.hs  Icon.hs  Input.hs  Layout.hs  MainPage.hs  Modal.hs  SelectorList.hs  SidePanel.hs  Style.hs  Table.hs  TagInput.hs  Tailwind.hs  Text.hs  Tooltip.hs  Typography.hs
frontend/lib/Competences/Frontend/WebSocket/: CommandSender.hs  Handlers.hs  Protocol.hs
nix/: backend.nix  frontend.nix  hix.nix  module.nix
template/: competences-template.cabal
template/app/: Main.hs
