cabal-version:      3.4
name:               competences-backend
version:            0.1.0.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings,
        TypeFamilies
    exposed-modules:
        Competences.Backend.Eff.Storage
    build-depends:
        base ^>=4.20.0.0,
        competences-common,
        containers,
        effectful,
        servant-server
    hs-source-dirs:   lib
    default-language: GHC2024

executable competences-backend
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        servant-server,
        competences-backend,
        competences-common
    hs-source-dirs:   app
    default-language: GHC2024

