cabal-version:      3.4
name:               competences-backend
version:            0.1.0.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings,
        TypeFamilies
    exposed-modules:
        Competences.Backend.API.Auth
        Competences.Backend.Eff.Db
    build-depends:
        base ^>=4.20.0.0,
        competences-common,
        containers,
        effectful,
        postgresql-simple,
        resource-pool,
        servant,
        servant-server,
        temporary,
        text
    hs-source-dirs:   lib
    default-language: GHC2024

executable competences-backend
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        servant-server,
        competences-backend,
        competences-common
    hs-source-dirs:   app
    default-language: GHC2024

test-suite competences-backend-test
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings,
        TypeFamilies
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Util.Eff.TestDb
    build-depends:
        base ^>=4.20.0.0,
        competences-backend,
        effectful
