cabal-version:      3.4
name:               competences-backend
version:            0.4.1.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror

library
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings,
        TypeFamilies
    exposed-modules:
        Competences.Backend.API.Auth
        Competences.Backend.Auth
        Competences.Backend.Config
        Competences.Backend.Database
        Competences.Backend.Eff.Db
        Competences.Backend.Envelope
        Competences.Backend.HashedFile
        Competences.Backend.HTTP
        Competences.Backend.State
        Competences.Backend.WebSocket
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        blaze-html,
        bytestring,
        competences-common,
        containers,
        cookie,
        cryptonite,
        directory,
        effectful,
        filepath,
        fsnotify,
        http-client,
        http-client-tls,
        http-types,
        http-conduit,
        hslogger,
        jwt,
        ixset-typed,
        memory,
        optics-core,
        optparse-applicative,
        postgresql-simple >= 0.7.0.1,
        resource-pool,
        servant,
        servant-blaze,
        servant-server,
        servant-websockets,
        stm,
        text,
        time,
        uuid,
        uuid-types,
        wai,
        wai-extra,
        wai-websockets,
        warp,
        websockets
    hs-source-dirs:   lib
    default-language: GHC2024

executable competences-backend
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings,
        TypeFamilies
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        bytestring,
        competences-backend,
        competences-common,
        containers,
        http-types,
        optparse-applicative,
        postgresql-simple,
        resource-pool,
        servant,
        servant-server,
        stm,
        text,
        time,
        uuid,
        uuid-types,
        wai,
        wai-websockets,
        warp,
        websockets
    hs-source-dirs:   app
    default-language: GHC2024

test-suite competences-backend-test
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings,
        TypeFamilies
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Util.Eff.TestDb
    build-depends:
        base ^>=4.21.0.0,
        competences-backend,
        effectful
