cabal-version:      3.4
name:               competences-common
version:            0.1.0.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        OverloadedStrings
    exposed-modules:
        Competences.API.CourseList
        Competences.Command
        Competences.Command.ChangeField
        Competences.Command.Common
        Competences.Model.Assessment
        Competences.Model.Evidence
        Competences.Model.ChangableField
        Competences.Model.Competence
        Competences.Model.CompetenceGrid
        Competences.Model.Id
        Competences.Model.Resource
        Competences.Model.User
        Competences.Model
    build-depends:
        base ^>=4.20.0.0,
        aeson,
        binary,
        bytestring,
        containers,
        cryptohash-sha1,
        generics-sop,
        ixset-typed,
        optics-core,
        servant,
        servant-auth,
        text,
        time,
        uuid
    hs-source-dirs:   lib
    default-language: GHC2024

test-suite competences-common-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        competences-common
