cabal-version:      3.4
name:               competences-common
version:            0.3.0.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -Werror

library
    import:           warnings
    default-extensions:
        AllowAmbiguousTypes,
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        OverloadedStrings
    exposed-modules:
        Competences.Analysis.Statistics
        Competences.Command
        Competences.Command.Assignments
        Competences.Command.ChangeField
        Competences.Command.Common
        Competences.Command.Competences
        Competences.Command.Evidences
        Competences.Command.Interpret
        Competences.Command.Tasks
        Competences.Command.Users
        Competences.Common.BinaryOrphans
        Competences.Common.IxSet
        Competences.Document
        Competences.Document.ActivityType
        Competences.Document.Assessment
        Competences.Document.Assignment
        Competences.Document.Competence
        Competences.Document.CompetenceGrid
        Competences.Document.Evidence
        Competences.Document.Id
        Competences.Document.Lock
        Competences.Document.Order
        Competences.Document.Resource
        Competences.Document.Task
        Competences.Document.User
        Competences.Document.Verdict
        Competences.Protocol
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        base64-bytestring,
        binary,
        bytestring,
        containers,
        data-default,
        extra,
        ixset-typed,
        optics-core,
        random,
        text,
        time,
        uuid-types
    hs-source-dirs:   lib
    default-language: GHC2024

test-suite competences-common-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        competences-common,
        containers,
        ixset-typed,
        time,
        text
