cabal-version:      3.4
name:               competences-frontend
version:            0.1.0.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

flag wasm
     description: Build for WASM
     default:     False

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        OverloadedStrings
    exposed-modules:
        Competences.Frontend.App,
        Competences.Frontend.Common.Effect,
        Competences.Frontend.Common.Random,
        Competences.Frontend.Common.Reorder,
        Competences.Frontend.Common.Translate,
        Competences.Frontend.Common,
        Competences.Frontend.Component.CompetenceGridEditor,
        Competences.Frontend.Component.CompetenceGridViewer,
        Competences.Frontend.Component.DateSelector,
        Competences.Frontend.Component.Editor,
        Competences.Frontend.Component.Editor.Editable,
        Competences.Frontend.Component.Editor.EditorField,
        Competences.Frontend.Component.Editor.FlowView,
        Competences.Frontend.Component.Editor.FormView,
        Competences.Frontend.Component.Editor.TableView,
        Competences.Frontend.Component.Editor.Types,
        Competences.Frontend.Component.Editor.View,
        Competences.Frontend.Component.EnumSelector,
        Competences.Frontend.Component.EvidenceCompetenceSelector,
        Competences.Frontend.Component.EvidenceCreator,
        Competences.Frontend.Component.EvidenceEditor,
        Competences.Frontend.Component.EvidenceSelector,
        Competences.Frontend.Component.ListSelector,
        Competences.Frontend.Component.UserListEditor,
        Competences.Frontend.Component.UserSelector,
        Competences.Frontend.Page.EvidencesPage,
        Competences.Frontend.Page.ManageUsersPage,
        Competences.Frontend.Page.ViewCompetenceGridPage,
        Competences.Frontend.SyncDocument,
        Competences.Frontend.View,
        Competences.Frontend.View.Button,
        Competences.Frontend.View.Form,
        Competences.Frontend.View.Icon,
        Competences.Frontend.View.Layout,
        Competences.Frontend.View.Modal,
        Competences.Frontend.View.SidePanel,
        Competences.Frontend.View.Table,
        Competences.Frontend.View.Tailwind,
        Competences.Frontend.View.Text
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        bytestring,
        competences-common,
        containers,
        extra,
        jsaddle,
        miso >= 1.9.0,
        mtl,
        optics-core,
        random,
        stm,
        text,
        time,
        unliftio
    hs-source-dirs:   lib
    default-language: GHC2024

executable competences-frontend
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedRecordDot,
        OverloadedStrings
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        bytestring,
        competences-common,
        competences-frontend,
        random,
        text
    if !flag(wasm)
        build-depends:
            jsaddle-warp,
            optparse-applicative
    if flag(wasm)
        build-depends:
            jsaddle-wasm
        cpp-options: -DWASM
        ghc-options:
          -no-hs-main
          -optl-mexec-model=reactor
          "-optl-Wl,--export=hs_start"
    hs-source-dirs:   app
    default-language: GHC2024
