cabal-version:      3.4
name:               competences-frontend
version:            0.1.0.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

flag wasm
     description: Build for WASM
     default:     False

common warnings
    ghc-options: -Wall -Werror

library
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        OverloadedStrings
    exposed-modules:
        Competences.Frontend.App,
        Competences.Frontend.Common.Random,
        Competences.Frontend.Common.Reorder,
        Competences.Frontend.Common.Translate,
        Competences.Frontend.Common,
        Competences.Frontend.Component.Assignment,
        Competences.Frontend.Component.Assignment.EditorDetail,
        Competences.Frontend.Component.Assignment.EvaluatorDetail,
        Competences.Frontend.Component.AssignmentViewer,
        Competences.Frontend.Component.CompetenceGrid,
        Competences.Frontend.Component.Editor,
        Competences.Frontend.Component.Editor.Editable,
        Competences.Frontend.Component.Editor.EditorField,
        Competences.Frontend.Component.Editor.FlowView,
        Competences.Frontend.Component.Editor.FormView,
        Competences.Frontend.Component.Editor.TableView,
        Competences.Frontend.Component.Editor.Types,
        Competences.Frontend.Component.Editor.View,
        Competences.Frontend.Component.EvidenceCompetenceSelector,
        Competences.Frontend.Component.EvidenceEditor,
        Competences.Frontend.Component.Selector.AssignmentSelector,
        Competences.Frontend.Component.Selector.Common,
        Competences.Frontend.Component.Selector.CompetenceGridSelector,
        Competences.Frontend.Component.Selector.DateSelector,
        Competences.Frontend.Component.Selector.CompetenceLevelSelector,
        Competences.Frontend.Component.Selector.EnumSelector,
        Competences.Frontend.Component.Selector.EvidenceSelector,
        Competences.Frontend.Component.Selector.ListSelector,
        Competences.Frontend.Component.Selector.MultiStageSelector,
        Competences.Frontend.Component.Selector.SearchableListSelector,
        Competences.Frontend.Component.Selector.MultiTaskSelector,
        Competences.Frontend.Component.Selector.ObservationSelector,
        Competences.Frontend.Component.Selector.SelfContainedTaskSelector,
        Competences.Frontend.Component.Selector.UserSelector,
        Competences.Frontend.Component.SelectorDetail,
        Competences.Frontend.Component.SelfContainedTaskEditor,
        Competences.Frontend.Component.Static,
        Competences.Frontend.Component.StatisticsOverview,
        Competences.Frontend.Component.UserListEditor,
        Competences.Frontend.SyncDocument,
        Competences.Frontend.View,
        Competences.Frontend.View.Badge,
        Competences.Frontend.View.Button,
        Competences.Frontend.View.Card,
        Competences.Frontend.View.Colors,
        Competences.Frontend.View.Combobox,
        Competences.Frontend.View.Component,
        Competences.Frontend.View.DesignTokens,
        Competences.Frontend.View.Form,
        Competences.Frontend.View.Icon,
        Competences.Frontend.View.Input,
        Competences.Frontend.View.Layout,
        Competences.Frontend.View.MainPage,
        Competences.Frontend.View.Modal,
        Competences.Frontend.View.SidePanel,
        Competences.Frontend.View.Table,
        Competences.Frontend.View.Tailwind,
        Competences.Frontend.View.Text,
        Competences.Frontend.View.Tooltip,
        Competences.Frontend.View.Typography,
        Competences.Frontend.WebSocket
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        bytestring,
        competences-common,
        containers,
        data-default,
        extra,
        miso >= 1.9.0,
        mtl,
        optics-core,
        random,
        stm,
        text,
        time,
        unliftio
    hs-source-dirs:   lib
    default-language: GHC2024

executable competences-frontend
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        OverloadedStrings
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        bytestring,
        competences-common,
        competences-frontend,
        miso >= 1.9.0,
        random,
        text
    if !flag(wasm)
        build-depends:
            optparse-applicative
    if flag(wasm)
        build-depends:
            optics-core
        cpp-options: -DWASM
        ghc-options:
          -no-hs-main
          -optl-mexec-model=reactor
          "-optl-Wl,--export=hs_start"
    hs-source-dirs:   app
    default-language: GHC2024
