cabal-version:      3.4
name:               competences-frontend
version:            0.4.1.0
license:            BSD-3-Clause
author:             Markus Mayr
maintainer:         markus.mayr@tuta.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

flag wasm
     description: Build for WASM
     default:     False

common warnings
    ghc-options: -Wall -Werror

library
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        OverloadedStrings
    exposed-modules:
        Competences.Frontend.App,
        Competences.Frontend.Common.Random,
        Competences.Frontend.Common.Reorder,
        Competences.Frontend.Common.Translate,
        Competences.Frontend.Common,
        Competences.Frontend.Component.Assignment,
        Competences.Frontend.Component.Assignment.EditorDetail,
        Competences.Frontend.Component.Assignment.EvaluatorDetail,
        Competences.Frontend.Component.AssignmentViewer,
        Competences.Frontend.Component.CompetenceGrid,
        Competences.Frontend.Component.CompetenceGrid.Assessment,
        Competences.Frontend.Component.CompetenceGrid.Editor,
        Competences.Frontend.Component.CompetenceGrid.Grading,
        Competences.Frontend.Component.CompetenceGrid.Types,
        Competences.Frontend.Component.CompetenceGrid.Viewer,
        Competences.Frontend.Component.ConnectionStatus,
        Competences.Frontend.Component.Editor,
        Competences.Frontend.Component.Editor.Editable,
        Competences.Frontend.Component.Editor.EditorField,
        Competences.Frontend.Component.Editor.FlowView,
        Competences.Frontend.Component.Editor.FormView,
        Competences.Frontend.Component.Editor.TableView,
        Competences.Frontend.Component.Editor.Types,
        Competences.Frontend.Component.Editor.View,
        Competences.Frontend.Component.EvidenceCompetenceSelector,
        Competences.Frontend.Component.EvidenceEditor,
        Competences.Frontend.Component.EvidenceEditor.BulkEvidenceEditor,
        Competences.Frontend.Component.Selector.AssignmentSelector,
        Competences.Frontend.Component.Selector.Common,
        Competences.Frontend.Component.Selector.CompetenceGridSelector,
        Competences.Frontend.Component.Selector.DateSelector,
        Competences.Frontend.Component.Selector.CompetenceLevelSelector,
        Competences.Frontend.Component.Selector.EnumSelector,
        Competences.Frontend.Component.Selector.EvidenceSelector,
        Competences.Frontend.Component.Selector.ListSelector,
        Competences.Frontend.Component.Selector.MultiStageSelector,
        Competences.Frontend.Component.Selector.SearchableListSelector,
        Competences.Frontend.Component.Selector.MultiTaskSelector,
        Competences.Frontend.Component.Selector.ObservationSelector,
        Competences.Frontend.Component.Selector.TaskOrGroupSelector,
        Competences.Frontend.Component.Selector.UserSelector,
        Competences.Frontend.Component.SelectorDetail,
        Competences.Frontend.Component.TaskEditor,
        Competences.Frontend.Component.TaskEditor.TaskDetailView,
        Competences.Frontend.Component.TaskEditor.TaskGroupDetailView,
        Competences.Frontend.Component.Static,
        Competences.Frontend.Component.StatisticsOverview,
        Competences.Frontend.Component.UserListEditor,
        Competences.Frontend.SyncContext,
        Competences.Frontend.SyncContext.ProjectedSubscription,
        Competences.Frontend.SyncContext.SyncDocument,
        Competences.Frontend.SyncContext.UIState,
        Competences.Frontend.View,
        Competences.Frontend.View.Badge,
        Competences.Frontend.View.Button,
        Competences.Frontend.View.Card,
        Competences.Frontend.View.Colors,
        Competences.Frontend.View.Combobox,
        Competences.Frontend.View.Component,
        Competences.Frontend.View.DesignTokens,
        Competences.Frontend.View.Form,
        Competences.Frontend.View.Icon,
        Competences.Frontend.View.GradeBadge,
        Competences.Frontend.View.Input,
        Competences.Frontend.View.Layout,
        Competences.Frontend.View.MainPage,
        Competences.Frontend.View.Modal,
        Competences.Frontend.View.SelectorList,
        Competences.Frontend.View.SidePanel,
        Competences.Frontend.View.Table,
        Competences.Frontend.View.TagInput,
        Competences.Frontend.View.Tailwind,
        Competences.Frontend.View.Text,
        Competences.Frontend.View.Tooltip,
        Competences.Frontend.View.Typography,
        Competences.Frontend.WebSocket,
        Competences.Frontend.WebSocket.CommandSender,
        Competences.Frontend.WebSocket.Handlers,
        Competences.Frontend.WebSocket.Protocol
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        bytestring,
        competences-common,
        containers,
        data-default,
        extra,
        miso >= 1.9.0,
        mtl,
        optics-core,
        random,
        stm,
        text,
        time,
        unliftio
    hs-source-dirs:   lib
    default-language: GHC2024

executable competences-frontend
    import:           warnings
    default-extensions:
        DuplicateRecordFields,
        GADTs,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        OverloadedStrings
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        aeson,
        bytestring,
        competences-common,
        competences-frontend,
        miso >= 1.9.0,
        random,
        text
    if !flag(wasm)
        build-depends:
            optparse-applicative
    if flag(wasm)
        build-depends:
            optics-core
        cpp-options: -DWASM
        ghc-options:
          -no-hs-main
          -optl-mexec-model=reactor
          "-optl-Wl,--export=hs_start"
    hs-source-dirs:   app
    default-language: GHC2024
